Changed button style and practiced flexbox

--- a/surv-form/index.html
+++ b/surv-form/index.html
@@ -44,9 +44,12 @@
                 </label>
                 <label for="check">
                     What games have you played among these options? <br>
-                  <input id="check" type="checkbox" name="game" value="survey-form"> Honkai: Star Rail
+                  <input id="check" type="checkbox" name="game"> Honkai: Star Rail
                   <input id="check" type="checkbox" name="game"> Final Fantasy 7 Remake
                   <input id="check" type="checkbox" name="game"> Danganronpa Decadence
+                  <input id="check" type="checkbox" name="game"> Ace Attorney 1,2,3  
+                  <input id="check" type="checkbox" name="game"> Super Mario Bros.
+                  <input id="check" type="checkbox" name="game"> NIKKE: Goddess of Victory
                 </label>
             </fieldset>  
             <fieldset class="fields">
@@ -56,7 +59,7 @@
                 </textarea>
               </label>
             </fieldset>
-            <input id="submit" type="submit" value="Submit Survey">
+            <button id="submit" type="submit">Submit Survey</button>
         </form>
       </div>
     </main>
