Changes in the padding, adjusting unnecessary height changes.

--- a/surv-form/index.html
+++ b/surv-form/index.html
@@ -37,18 +37,15 @@
                     <option>Simulation</option>
                   </select>
                 </label>
-                <label for="radio">
+                <label class="box" for="radio">
                   What type of gamer are you? <br>
                   <input id="radio" type="radio" value="survey-form" name="gamer">Casual
                   <input id="radio" value="survey-form" name="gamer" type="radio">Pro
                 </label>
-                <label for="check">
+                <label class="box" for="check">
                     What games have you played among these options? <br>
                   <input id="check" type="checkbox" name="game"> Honkai: Star Rail
                   <input id="check" type="checkbox" name="game"> Final Fantasy 7 Remake
-                  <input id="check" type="checkbox" name="game"> Danganronpa Decadence
-                  <input id="check" type="checkbox" name="game"> Ace Attorney 1,2,3  
-                  <input id="check" type="checkbox" name="game"> Super Mario Bros.
                   <input id="check" type="checkbox" name="game"> NIKKE: Goddess of Victory
                 </label>
             </fieldset>  
